--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ sass:
 
 # Resume settings
 resume_avatar:                  "false"
-resume_name:                    "Resume :: S.H.Cheon"
+resume_name:                    "Resume (천승현)"
 resume_title:                   "Introduce"
 
 # used for the contact button in _layouts/resume.html
@@ -23,7 +23,10 @@ resume_contact_address:         "경기도 안양시"
 resume_header_contact_info:     ""
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p> 안녕하세요.
+resume_header_intro: "<p> 안녕하세요.<br>
+Embedded S/W 개발부터 시작하여 여러 산업 분야에 대한 IT 서비스 개발/운영을 수행한 풍부한 경험을 가지고 있습니다.
+항상 배우고자 하는 자세로 어떠한 도메인 분야에 대한 IT 업무를 담당하여도, 빠르게 적응하여 성과를 창출해왔습니다.
+업무가 주어지면 책임감을 가지고 맡은 역할을 완수하고자 노력하며, 매번 한 단계 성장하는 것을 즐기는 개발자입니다.
 </p>"
 
 
@@ -40,7 +43,7 @@ resume_section_experience:      true
 resume_section_education:       true
 resume_section_projects:        true
 resume_section_recognition:     true
-resume_section_links:           true
+resume_section_links:           false
 resume_section_skills:          false
 resume_section_associations:    false
 resume_section_interests:       false
