--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,16 +1,101 @@
 # Projects
 # uncomment the urls if you wish to display them, and add your own URL
+- project: 삼성SDS - 쿠팡차이나 직구 풀필먼트 서비스 개발.
+  role: Frontend & Backend Developer
+  duration: 2022.03 &mdash; Present
+  description: 중국 웨이하이에 위치한 물건을 한국 소비자가 직접 구매할 수 있도록, 물류IT 서비스를 SDS가 쿠팡에게 제공하는 과제에 참여.
+              <ul>
+              <li>개인통관고유번호 유효성 검증을 위한 API 개발</li>
+              <li>개인통관고유번호 관리를 위한 화면 개발</li>
+              <li>실행사로부터 물류 트래킹/주문마스터정보 수집 API 개발</li>
+              <li>쿠팡차이나-Sqaure API 연계 개발</li>
+              <li>외부 시스템 간 데이터 연계 및 저장을 위한 데이터 구조 분석</li>
+              <li>사용 기술 &#58; Vue.js, Node.js, AWS, PostgreSQL</li>
+              </ul>
 
-# jazznotes.io
-- project: jazznotes.io
-  role: Founder & Primary Developer
-  duration: 2012 &mdash; Present
-  # url: "#"
-  description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
+- project: 삼성SDS - 삼성전자 Factory Planning Test & Package 사업 ITO 운영
+  role: Software Engineer
+  duration: 2018.10 &mdash; 2021.12
+  description: 반도체 생산 공정 중 조립-테스트-패키징에 관한 일 생산 계획을 수립하는 IT 시스템은 운영 및 유지보수 수행.
+              <ul>
+              <li> 주간 생산 목표량을 일별 생산 목표량으로 변환 로직 개발/유지보수</li>
+              <li> 생산 납기 준수를 위한 일정 수립 로직 개발/유지보수 </li>
+              <li> 공장에서 작업중인 작업물을 납기가 임박한 주문용으로 지정해주는 로직 개발/유지보수</li>
+              <li> 일 생산 계획 시뮬레이션 로직 개발/유지보수</li>
+              <li> 일 생산 계획 시뮬레이션 결과 데이터 전송 방식 Batch 전송으로 개선 </li>
+              <li> Factory Planning UI에 출력되는 데이터 생성 로직 결과 분석 및 현업문의 대응 </li>
+              <li>사용 기술 &#58; Oracle Database, PL/SQL, Java, SpringFramework, JSP, Javascript, C#, WebLogic, MOZART Framework </li>
+              </ul>
 
-# Springfield Community Outreach Group
-- project: Springfield Community Outreach Group
-  role: Co-Founder & Organizer
-  duration: 2007 &mdash; Present
-  # url: "#"
-  description: SCOG is a local monthly meetup in Springfield where we share opportunities to volunteer in the community and organize support for families and neighborhoods in need of assistance that the community can provide.
+- project: Suresoft - 현대모비스 납품용 PROV for Android 솔루션 개발/유지보수
+  role: 전임연구원
+  duration: 2017.07 &mdash; 2018.07
+  description: 현대모비스에서 생산한 안드로이드 네비게이션에서 메모리 누수가 발생하는 App을 검출하는 솔루션 개발/유지보수.
+              <ul>
+              <li>Android Native Process에서 동적 메모리 할당/해제 API Hooking 로직 개발</li>
+              <li>동적 메모리 누수 로그 데이터 구조 개발/유지보수</li>
+              <li>동적 메모리 누수 로그 수집용 Android App UI 개발/유지보수</li>
+              <li>동적 메모리 누수 로그 수집을 위한 Server/Client 통신 구조 개선</li>
+              <li>동적 메모리 누수 로그 분석 로직 중 오탐지 케이스 발견 및 개선</li>
+              <li>현대모비스, 현대오토에버(네비게이션사업부) 솔루션 사용 가이드 안내를 위한 출장</li>
+              <li>사용 기술 &#58; Java, C++, Android SDK/PDK/NDK </li>
+              </ul>
+
+- project: Suresoft - 현대모비스 납품용 인포테인먼트 장비 UI 테스팅 도구 개발/유지보수
+  role: 전임연구원
+  duration: 2017.01 &mdash; 2018.07
+  description: 현대모비스에서 생산한 안드로이드 인포테인먼트 장비의 UI를 자동으로 테스트해주는 도구 개발.
+              <ul>
+              <li>Linux/Android OS 버전별 영상 취득 API 개발/유지보수</li>
+              <li>무손실압축 영상을 손실압축 영상 포맷으로 변경하여 UI 테스팅 수행 속도 개선 </li>
+              <li>인포테인먼트 화면 영상인식 용 딥러닝 모델 연구 및 조사</li>
+              <li>오픈소스를 활용한 Faster-RCNN 모델용 데이터 레이블링/학습/추론 파이프라인 조사 및 구축</li>
+              <li>사용 기술 &#58; Java, C++, Android SDK/PDK/NDK, Tensorflow, Python, Android Debug Bridge </li>
+              </ul>
+
+- project: 대학원 - 무인비행체를 활용한 영상기반 객체 추적 비행 시스템 연구개발
+  role: 대학원생
+  duration: 2015.03 &mdash; 2016.12
+  description: 무인비행체 관련 오픈소스 플랫폼을 조사/분석하고, 이를 활용하여 객체 추적 비행을 수행하는 비행 시스템 연구개발.
+              <ul>
+              <li>Arducopter/AR Drone/PX4 오픈소스 플랫폼 소스 분석</li>
+              <li>PX4플랫폼 API 분석 및 활용</li>
+              <li>SURF 영상인식 정보를 활용한 PID 비행제어 알고리즘 개발 </li>
+              <li>오픈소스를 활용한 영상기반 비행제어 알고리즘 테스트 모듈 구현 </li>
+              <li>사용 기술 &#58; C++, OpenCV, Java, QT, PX4, JMAVSim, MAVLink</li>
+              </ul>
+
+- project: 학부 졸업작품 - GPS 기반의 고정익 UAV 추적 안테나 시뮬레이터 구현
+  role: 대학생
+  duration: 2014.06 &mdash; 2014.08
+  description: 1Hz의 주기의 GPS 정보를 5Hz 주기로 변환하여 고정익 항공기를 추적하는 지향성 안테나의 동작을 시뮬레이션한 학부 졸업과제.
+    <ul>
+    <li>GPS 데이터의 위,경도 값 예측용 선형 Kalman Filter 구현</li>
+    <li>지향각 및 고도각 계산 로직 구현</li>
+    <li>안테나 모형 시각화</li>
+    <li>비행 시뮬레이터로 GPS 데이터 모의 생성</li>
+    <li>마이크로컨트롤러를 이용한 지향 안테나 모의 동작 구현</li>
+    <li>사용 기술 &#58; C언어, OpenGL, X-PLANE, Arduino</li>
+    </ul>
+
+- project: 공모전 - 안드로이드 어린이 집 종합관리용 시스템 개발
+  role: 대학생
+  duration: 2012.08 &mdash; 2012.12
+  description: 아동 폭행 사건 예방 및 어린이 집 관리자와 학부모와 소통하기 편리한 서비스를 구축하기 위해 공모전에 참여.
+    <ul>
+    <li>공지사항 Push 메세지 전송/수신 기능 개발</li>
+    <li>RFID 기반 출결 체크 수신/저장/전송을 위한 Web 서버 개발 </li>
+    <li>어린이 집에 설치된 IP 카메라 영상 조회 기능 구현</li>
+    <li>어린이집 홈페이지 제작</li>
+    <li>사용 기술 &#58; Java, Android SDK, PHP, MySQL, Apache Tomcat, HTTP API, SQLite</li>
+    </ul>
+
+- project: 공모전 - 편대비행을 수행하는 캔위성 제작
+  role: 대학생
+  duration: 2012.06 &mdash; 2012.08
+  description: 편대비행 임무를 수행하는 소형 캔위성을 제작하는 공모전에 참여.
+    <ul>
+    <li>블루투스 모듈에서 지원하는 1:N 통신 API를 활용한 펌웨어 개발</li>
+    <li>IMU 센서 데이터 수집 기능 개발</li>
+    <li>사용 기술 &#58; C언어, Bluetooth Piconet</li>
+    </ul>
