--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,10 +1,16 @@
 # Recognitions
-- award: Outstanding Achievement
-  organization: Springfield Young Professionals
-  year: 2010, 2014
-  summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
+- award: 리눅스마스터 1급
+  organization: 한국정보통신진흥협회
+  year: 2016
 
-- award: Most Likely To Succeed
-  organization: Springfield High School
-  year: 2004
-  summary: Voted Most Likely To Succeed by a panel of my high school peers.
+- award: ISTQB Foundation level
+  organization: International Software Testing Qualification Board
+  year: 2015
+  # summary: nothing
+
+- award: 정보처리기사 1급
+  organization: 한국산업인력공단
+  year: 2014
+  # summary: nothing
+
+
