--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,11 +3,11 @@
 - company: 삼성SDS
   position: Sofeware Engineer
   duration: 2018.07 &mdash; Present
-  summary: Cello Sqaure 풀필먼트 서비스 개발/운영
+  summary: Cello Square 플랫폼 풀필먼트 서비스 개발/운영
     <ul>
-    <li>Sqaure 풀필먼트 서비스 Frontend / Backend 개발/운영</li>
-    <li>Sqaure 풀필먼트 서비스 Frontend / Backend 비즈니스 로직 문의 대응</li>
-    <li>Sqaure 풀필먼트 서비스 운영용 Admin용 Frontend / Backend 유지보수 </li>
+    <li>Square 풀필먼트 서비스 Frontend / Backend 개발/운영</li>
+    <li>Square 풀필먼트 서비스 Frontend / Backend 비즈니스 로직 문의 대응</li>
+    <li>Square 풀필먼트 서비스 운영용 Admin용 Frontend / Backend 유지보수 </li>
     </ul>
     삼성전자 반도체 Factory Planning IT서비스 운영/유지보수
     <ul>
