--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,7 +1,7 @@
 # Jobs
 # VP of Global Communications
 - company: 삼성SDS
-  position: Sofeware Engineer
+  position: Sofware Engineer
   duration: 2018.07 &mdash; Present
   summary: Cello Square 플랫폼 풀필먼트 서비스 개발/운영
     <ul>
